--- a/ru.css
+++ b/ru.css
@@ -1170,8 +1170,9 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 279px;
+    width: 260px;
     height: 274px;
+    margin-right: -25px;
   }
 
   .u-section-4 .u-shape-1 {
