Ohhhh. Some bug fixed

--- a/en.css
+++ b/en.css
@@ -1157,8 +1157,8 @@
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 340px;
-    margin-right: -10px;
+    width: 365px;
+    margin-right: -35px;
     margin-left: auto;
   }
 
@@ -1167,9 +1167,9 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 260px;
+    width: 285px;
     height: 274px;
-    margin-right: -25px;
+    margin-right: 0;
   }
 
   .u-section-4 .u-shape-1 {
@@ -1182,7 +1182,7 @@
   }
 
   .u-section-4 .u-container-layout-3 {
-    padding-right: 1px;
+    padding: 0 25px 0 0;
   }
 
   .u-section-4 .u-text-3 {
@@ -1412,12 +1412,12 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 803px;
+    min-height: 826px;
   }
 
   .u-section-5 .u-layout-wrap-1 {
     width: 361px;
-    margin-top: -124px;
+    margin-top: -101px;
     margin-right: -21px;
     margin-left: auto;
   }
