--- a/ro.css
+++ b/ro.css
@@ -1157,8 +1157,8 @@
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 340px;
-    margin-right: -10px;
+    width: 365px;
+    margin-right: -35px;
     margin-left: auto;
   }
 
@@ -1167,13 +1167,14 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 260px;
+    width: 285px;
     height: 274px;
-    margin-right: -25px;
+    margin-top: -87px;
+    margin-right: 0;
   }
 
   .u-section-4 .u-shape-1 {
-    margin-top: -313px;
+    margin-top: -314px;
     margin-left: 20px;
   }
 
@@ -1182,25 +1183,25 @@
   }
 
   .u-section-4 .u-container-layout-3 {
-    padding-right: 1px;
+    padding: 0 2px;
   }
 
   .u-section-4 .u-text-3 {
     width: auto;
     margin-top: 41px;
-    margin-left: 2px;
+    margin-right: 23px;
+    margin-left: 0;
   }
 
   .u-section-4 .u-text-4 {
     width: auto;
-    margin-right: -1px;
-    margin-left: 7px;
+    margin-right: 22px;
+    margin-left: 5px;
   }
 
   .u-section-4 .u-link-2 {
-    margin-right: auto;
+    margin-right: 23px;
     margin-bottom: 0;
-    margin-left: 250px;
   }
 } .u-section-5 {
   background-image: none;
