--- a/ro.css
+++ b/ro.css
@@ -847,9 +847,10 @@
   }
 
   .u-section-3 .u-shape-1 {
-    width: 375px;
     margin-top: 1831px;
-    margin-right: -35px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-3 .u-layout-wrap-1 {
@@ -1133,12 +1134,13 @@
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1020px;
+    min-height: 977px;
   }
 
   .u-section-4 .u-group-1 {
-    width: 375px;
-    margin-right: -35px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-4 .u-container-layout-1 {
@@ -1157,51 +1159,52 @@
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 365px;
-    margin-right: -35px;
-    margin-left: auto;
+    margin-top: -80px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 187px;
+    min-height: 252px;
   }
 
   .u-section-4 .u-image-1 {
-    width: 285px;
-    height: 274px;
-    margin-top: -87px;
+    width: 248px;
+    height: 238px;
+    margin-top: 7px;
     margin-right: 0;
   }
 
   .u-section-4 .u-shape-1 {
-    margin-top: -314px;
-    margin-left: 20px;
+    margin-top: -52px;
+    margin-left: 10px;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 270px;
+    min-height: 215px;
   }
 
   .u-section-4 .u-container-layout-3 {
-    padding: 0 2px;
+    padding: 0;
   }
 
   .u-section-4 .u-text-3 {
     width: auto;
-    margin-top: 41px;
-    margin-right: 23px;
-    margin-left: 0;
+    margin-top: 35px;
+    margin-left: 1px;
+    margin-right: 1px;
   }
 
   .u-section-4 .u-text-4 {
     width: auto;
-    margin-right: 22px;
-    margin-left: 5px;
+    margin-left: 6px;
   }
 
   .u-section-4 .u-link-2 {
-    margin-right: 23px;
+    margin-right: auto;
     margin-bottom: 0;
+    margin-left: 239px;
   }
 } .u-section-5 {
   background-image: none;
@@ -1417,10 +1420,9 @@
   }
 
   .u-section-5 .u-layout-wrap-1 {
-    width: 361px;
     margin-top: -76px;
-    margin-right: -21px;
-    margin-left: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-5 .u-image-1 {
