MAYBE THIS IS LAST FIX!

--- a/ro.css
+++ b/ro.css
@@ -1436,6 +1436,8 @@
   .u-section-5 .u-image-2 {
     width: 304px;
     height: 281px;
+    margin-top: 0;
+    margin-right: 0;
     margin-bottom: 0;
   }
 
