THIS IS FINAL VERSION!!!!!

--- a/ru.css
+++ b/ru.css
@@ -79,7 +79,7 @@
   }
 
   .u-section-1 .u-group-1 {
-    width: 940px;
+    width: 679px;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -97,37 +97,37 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 961px;
-  }
-
   .u-section-1 .u-list-1 {
-    width: 123px;
+    width: 167px;
   }
 
   .u-section-1 .u-repeater-1 {
-    min-height: 54px;
+    min-height: 50px;
     grid-template-columns: repeat(3, calc(33.3333% - 5.33333px));
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 3px;
+    margin-top: 1px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 3px;
+    margin-top: 1px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 3px;
+    margin-top: 1px;
     margin-right: auto;
   }
 
   .u-section-1 .u-group-1 {
-    width: 720px;
-    margin-top: 158px;
+    min-height: 560px;
+    margin-top: 66px;
+    margin-bottom: 45px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -154,21 +154,16 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1000px;
-  }
-
   .u-section-1 .u-list-1 {
-    width: 138px;
-  }
-
-  .u-section-1 .u-repeater-1 {
-    min-height: 51px;
+    margin-top: 60px;
   }
 
   .u-section-1 .u-group-1 {
-    width: 540px;
-    margin-top: 269px;
+    margin-top: 65px;
+    margin-bottom: 60px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -185,23 +180,26 @@
   }
 
   .u-section-1 .embed-responsive-1 {
-    width: 316%;
-    left: -108%;
+    width: 280%;
+    left: -90%;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1141px;
+    min-height: 865px;
   }
 
   .u-section-1 .u-list-1 {
-    width: 136px;
+    width: 170px;
+    margin-top: 117px;
   }
 
   .u-section-1 .u-group-1 {
-    width: 340px;
-    margin-top: 371px;
+    margin-top: 30px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -213,8 +211,8 @@
   }
 
   .u-section-1 .embed-responsive-1 {
-    width: 523%;
-    left: -211%;
+    width: 444%;
+    left: -172%;
   }
 } .u-section-2 {
   background-image: none;
@@ -1419,11 +1417,11 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 847px;
+    min-height: 826px;
   }
 
   .u-section-5 .u-layout-wrap-1 {
-    margin-top: -80px;
+    margin-top: -100px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -1433,12 +1431,14 @@
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 364px;
+    min-height: 363px;
   }
 
   .u-section-5 .u-image-2 {
-    width: 304px;
+    width: 289px;
     height: 281px;
+    margin-top: 0;
+    margin-right: 0;
     margin-bottom: 0;
   }
 
