--- a/en.css
+++ b/en.css
@@ -1436,6 +1436,7 @@
   .u-section-5 .u-image-2 {
     width: 289px;
     height: 281px;
+    margin-top: 0;
     margin-right: 0;
     margin-bottom: 0;
   }
